Fix a cargar svg
Carga las url con _ pero las que tienen caracteres alemanes Ü todavia no
puedo cargarlas