@@ -10,7 +10,9 @@ import com.larvalabs.svgandroid.SVG;
 import com.larvalabs.svgandroid.SVGParser;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
 
 import uy.edu.ucu.eu_goal_news.R;
 
@@ -29,11 +31,14 @@ public class GetDrawableAsyncTask extends AsyncTask<String, Void, Drawable> {
     @Override
     protected Drawable doInBackground(String... params) {
 
-        String url = params[0];
+        String urlString = params[0];
         HttpURLConnection connection = null;
         Drawable drawable = null;
         try {
-            connection = (HttpURLConnection) new URL(url).openConnection();
+            URL url = new URL(urlString);
+            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
+            urlString = uri.toASCIIString();
+            connection = (HttpURLConnection) new URL(urlString).openConnection();
             SVG svgLogo = SVGParser.getSVGFromInputStream(connection.getInputStream());
             drawable = svgLogo.createPictureDrawable();
 
